add get average weathe bby date
